<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ExpenseEntry</class>
 <widget class="QWidget" name="ExpenseEntry">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Expense Entry</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QComboBox" name="categoryComboBox">
      <property name="placeholderText">
       <string>Select Category</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QComboBox" name="subcategoryComboBox">
      <property name="placeholderText">
       <string>Select Subcategory</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLineEdit" name="amountLineEdit">
      <property name="placeholderText">
       <string>Amount</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QDateEdit" name="dateEdit">
      <property name="calendarPopup">
       <bool>true</bool>
      </property>
      <property name="date">
       <date>2024-12-16</date>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="saveExpenseButton">
      <property name="text">
       <string>Save Expense</string>
      </property>
     </widget>
    </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
